--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ header {
   align-items: center;
   justify-content: center;
   /* box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.2); */
-  transition: all 0.8s;
+  transition: all var(--header-transition-time);
 }
 
 header .container {
@@ -33,6 +33,7 @@ header .container {
 
 header img {
   height: var(--brand-icon-height);
+  transition: all var(--header-transition-time);
 }
 
 header ul {
@@ -75,6 +76,7 @@ header a:hover {
 header .btn {
   padding: 0.6rem 1.6rem;
   border-radius: 2rem;
+  transition: all var(--header-transition-time);
 }
 
 /* Sticky Part */
@@ -1009,4 +1011,219 @@ footer a {
   font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
   font-weight: 500;
   line-height: 2em;
+}
+
+/* 
+ =========================================================================================================================
+  Section#contact-hero
+ =========================================================================================================================
+*/
+
+#contact-hero {
+  background: url("../images/contact-hero-bg.jfif") no-repeat center center/100%;
+  min-height: 65vh;
+  padding: calc(3rem + var(--header-height)) 0 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+#contact-hero::after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: inset 0 10rem 10rem rgba(255, 255, 255, 0.7),
+    inset 0 -5rem 5rem rgba(255, 255, 255, 1);
+}
+
+#contact-hero * {
+  position: relative;
+  z-index: 2;
+}
+
+#contact-hero p {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 16px;
+  color: var(--theme-primary-color);
+  letter-spacing: 5px;
+  line-height: 2em;
+}
+
+#contact-hero h1 {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  text-transform: capitalize;
+  font-weight: 700;
+  font-size: 3rem;
+  color: rgba(0, 0, 0, 0.8) !important;
+  line-height: 1.4em;
+}
+
+/* 
+ =========================================================================================================================
+  Section#contact-area
+ =========================================================================================================================
+*/
+
+#contact-area {
+  padding: 4rem 0;
+  background: url("../images/shapes-bg.png") repeat center center;
+}
+
+#contact-area .container {
+  padding: 0 8rem;
+}
+
+#contact-area .container .boxes {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 3rem;
+}
+
+#contact-area .boxes > div {
+  border-radius: 10px;
+  overflow: hidden;
+  padding: 40px 20px;
+  text-align: center;
+}
+
+#contact-area .boxes > div:nth-child(1) {
+  background-color: #ff7355;
+}
+
+#contact-area .boxes > div:nth-child(2) {
+  background-color: #ff9c02;
+}
+
+#contact-area .boxes > div:nth-child(3) {
+  background-color: #2b76df;
+}
+
+#contact-area .boxes > div h2 {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  color: rgba(255, 255, 255, 0.7);
+  letter-spacing: 3px;
+  line-height: 1.5em;
+  margin-bottom: 1.5rem;
+}
+
+#contact-area .boxes > div p {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-size: 16px;
+  line-height: 1;
+  color: #fff;
+  font-weight: 500;
+}
+
+#contact-area .form {
+  margin: 3rem 0 4rem;
+  padding: 40px 140px;
+  background-color: #7f5aff;
+  border-radius: 8px;
+  box-shadow: 0px 120px 80px -80px rgb(0 0 0 / 12%);
+}
+
+#contact-area .form p {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  line-height: 1.7em;
+  color: #fff;
+  text-align: center;
+  margin-bottom: 0;
+}
+
+#contact-area .form h1 {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  font-size: 35px;
+  line-height: 1.5em;
+  text-align: center;
+  color: #fff;
+}
+
+#contact-area .form form {
+  margin-top: 2rem;
+}
+
+#contact-area .form form > div {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+}
+
+#contact-area .form form textarea {
+  width: 100%;
+  height: 8rem;
+  margin-top: 1rem;
+}
+
+#contact-area .form form .btn {
+  display: block;
+  width: auto;
+  margin-top: 1rem;
+  margin-left: auto;
+  background: transparent;
+  font-size: 1.1rem;
+  border-radius: 10px;
+  padding: 0.7rem 1.4rem;
+}
+
+#contact-area .form form .btn:hover {
+  opacity: 1;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+#contact-area .form form input,
+#contact-area .form form textarea {
+  background: transparent;
+  background-color: rgba(0, 0, 0, 0.1);
+  border: 0;
+  outline: 0;
+  font-size: 16px;
+  color: #fff;
+  padding: 0.8rem;
+}
+
+#contact-area .form form input,
+#contact-area .form form textarea,
+#contact-area .form form input::placeholder,
+#contact-area .form form textarea::placeholder {
+  color: #fff;
+  font-weight: 500;
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+}
+
+/* 
+ =========================================================================================================================
+  Section#map
+ =========================================================================================================================
+*/
+
+#map {
+  margin: 1rem 0 4rem;
+  width: 100%;
+  background: url("../images/shapes-bg.png") repeat center center;
+}
+
+#map .container {
+  padding: 0;
+}
+
+#map iframe {
+  width: 100%;
+  border-radius: 10px;
+  height: 400px;
 }
