--- a/css/style.css
+++ b/css/style.css
@@ -1227,3 +1227,280 @@ footer a {
   border-radius: 10px;
   height: 400px;
 }
+
+/* 
+ =========================================================================================================================
+  Section#about-hero
+ =========================================================================================================================
+*/
+
+#about-hero {
+  background: url("../images/shapes-bg-color.png");
+  min-height: 65vh;
+  padding: calc(3rem + var(--header-height)) 0 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: relative;
+}
+
+#about-hero::after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+#about-hero * {
+  position: relative;
+  z-index: 2;
+}
+
+#about-hero p {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 16px;
+  color: var(--theme-primary-color);
+  letter-spacing: 5px;
+  line-height: 2em;
+  margin-bottom: 0;
+}
+
+#about-hero h1 {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  font-size: 3rem;
+  color: rgba(0, 0, 0, 0.8);
+  line-height: 1.4em;
+  padding-bottom: 0.5rem;
+}
+
+#about-hero .btn {
+  color: #ffffff;
+  border-width: 15px;
+  border-color: rgba(210, 159, 104, 0);
+  border-radius: 100px;
+  letter-spacing: 0px;
+  font-size: 16px;
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+}
+
+/* 
+ =========================================================================================================================
+  Section#about-mission
+ =========================================================================================================================
+*/
+
+#about-mission {
+  min-height: 650px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  background-color: #3a5063;
+}
+
+#about-mission article:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 3rem 6rem;
+}
+
+#about-mission article:nth-child(2) {
+  background: url("../images/pencils.jfif") no-repeat center center/cover;
+}
+
+#about-mission article:nth-child(1) p:nth-child(1) {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--theme-primary-color);
+  letter-spacing: 5px;
+  line-height: 1.2em;
+  margin-bottom: 0;
+  padding-bottom: 0.5rem;
+}
+
+#about-mission article:nth-child(1) h2 {
+  font-family: "Cabin Sketch", display;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 40px;
+  letter-spacing: 6px;
+  line-height: 1.4em;
+  color: #fff;
+}
+
+#about-mission article:nth-child(1) p:nth-child(3) {
+  line-height: 2em;
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 2em;
+  color: #fff;
+}
+
+/* 
+ =========================================================================================================================
+  Section#about-vision
+ =========================================================================================================================
+*/
+
+#about-vision {
+  background: #ebe9eb;
+  min-height: 650px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+#about-vision article:nth-child(1) {
+  background: url("../images/staff-hero-bg.jfif") no-repeat center center/cover;
+}
+
+#about-vision article:nth-child(2) {
+  padding: 3rem 6rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+#about-vision article:nth-child(2) p:nth-child(1) {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #2b76df !important;
+  letter-spacing: 5px;
+  line-height: 1.2em;
+}
+
+#about-vision article:nth-child(2) h2 {
+  font-family: "Cabin Sketch", display;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 40px;
+  letter-spacing: 6px;
+  line-height: 1.4em;
+  color: #333;
+}
+
+#about-vision article:nth-child(2) p:nth-child(3) {
+  line-height: 2em;
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 2em;
+}
+
+/* 
+ =========================================================================================================================
+  Section#about-vision
+ =========================================================================================================================
+*/
+
+#curriculum {
+  padding: 5rem 0;
+}
+
+#curriculum > i {
+  font-size: 2rem;
+  display: block;
+  text-align: center;
+  color: var(--theme-primary-color);
+  margin-bottom: 1rem;
+}
+
+#curriculum > p:nth-child(2) {
+  font-family: "Cabin Sketch", display;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  color: var(--theme-primary-alt-color);
+  letter-spacing: 5px;
+  line-height: 2em;
+  text-align: center;
+  margin-bottom: 0;
+}
+
+#curriculum > h2 {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.4em;
+  color: #333;
+  padding-bottom: 10px;
+  text-align: center;
+}
+
+#curriculum > p {
+  line-height: 2em;
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 2em;
+  text-align: center;
+  max-width: 700px;
+  margin: 0 auto;
+  color: #999;
+}
+
+#curriculum .container {
+  padding: 3rem 6rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 3rem;
+  margin-bottom: 3rem;
+}
+
+#curriculum .container.alt {
+  margin-bottom: 0;
+}
+
+#curriculum .container .box {
+  padding: 2rem;
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  line-height: 2em;
+  border-radius: 5px;
+  overflow: hidden;
+  border-top: 10px solid var(--theme-primary-color);
+  box-shadow: 0px 20px 45px -5px rgb(0 0 0 / 7%);
+  display: flex;
+}
+
+#curriculum .container.alt .box {
+  border-top: 10px solid var(--theme-primary-alt-color);
+}
+
+#curriculum .box i {
+  font-size: 2rem;
+  color: var(--theme-primary-color);
+  margin-right: 1rem;
+}
+
+#curriculum .container.alt .box i {
+  color: var(--theme-primary-alt-color);
+}
+
+#curriculum .box h2 {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.7em;
+  color: #333;
+  padding-bottom: 10px;
+  margin: 0;
+}
+
+#curriculum .box p {
+  margin: 0;
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  line-height: 2em;
+}
