--- a/css/style.css
+++ b/css/style.css
@@ -1377,7 +1377,7 @@ footer a {
   font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
   font-weight: 700;
   text-transform: uppercase;
-  color: #2b76df !important;
+  color: var(--theme-primary-color);
   letter-spacing: 5px;
   line-height: 1.2em;
 }
@@ -1502,5 +1502,240 @@ footer a {
 #curriculum .box p {
   margin: 0;
   font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  line-height: 2em;
+}
+
+/* 
+ =========================================================================================================================
+  Section#about-alumni
+ =========================================================================================================================
+*/
+
+#about-alumni {
+  min-height: 650px;
+  background-color: #ebe9eb;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+}
+
+#about-alumni article:nth-child(1) {
+  padding: 3rem 6rem;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+}
+
+#about-alumni article:nth-child(2) {
+  height: 100%;
+  background: url("../images/alumni-bg.jpg") no-repeat center center/cover;
+  position: relative;
+}
+
+#about-alumni article:nth-child(2)::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--theme-statement-box-shadow-color);
+}
+
+#about-alumni article:nth-child(1) p:nth-child(1) {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--theme-primary-color);
+  letter-spacing: 5px;
+  line-height: 1.2em;
+}
+
+#about-alumni article:nth-child(1) h2 {
+  font-family: "Cabin Sketch", display;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 40px;
+  letter-spacing: 6px;
+  line-height: 1.4em;
+  color: #333;
+}
+
+#about-alumni article:nth-child(1) p:nth-child(3) {
+  line-height: 2em;
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 2em;
+}
+
+#about-alumni article:nth-child(1) .btn {
+  padding: 0.9rem 1.8rem;
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+}
+
+/* 
+ =========================================================================================================================
+  Section#about-wof
+ =========================================================================================================================
+*/
+
+#about-wof {
+  background: #e3e2e8;
+  min-height: 650px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+#about-wof article {
+  height: 100%;
+  padding: 3rem 6rem;
+}
+
+#about-wof article:nth-child(1) {
+  background: url("../images/wall-of-fame.jpg") no-repeat right center/cover;
+}
+
+#about-wof article:nth-child(2) {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+#about-wof article:nth-child(2) p:nth-child(1) {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--theme-primary-color);
+  letter-spacing: 5px;
+  line-height: 1.2em;
+}
+
+#about-wof article:nth-child(2) h2 {
+  font-family: "Cabin Sketch", display;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 40px;
+  letter-spacing: 6px;
+  line-height: 1.4em;
+  color: #333;
+}
+
+#about-wof article:nth-child(2) p:nth-child(3) {
+  line-height: 2em;
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 2em;
+}
+
+#about-wof article:nth-child(2) .btn {
+  padding: 0.9rem 1.8rem;
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+}
+
+/* 
+ =========================================================================================================================
+  Section#about-sponsors
+ =========================================================================================================================
+*/
+
+#about-sponsors {
+  padding: 3rem 0;
+  background: #fff;
+}
+
+#about-sponsors > i {
+  font-size: 2rem;
+  display: block;
+  text-align: center;
+  color: var(--theme-primary-color);
+  margin-bottom: 1rem;
+}
+
+#about-sponsors > p:nth-child(2) {
+  font-family: "Cabin Sketch", display;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: var(--theme-primary-color);
+  letter-spacing: 5px;
+  line-height: 1.5em;
+  text-align: center;
+  margin-bottom: 0;
+  padding-bottom: 10px;
+}
+
+#about-sponsors > h2 {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.4em;
+  text-align: center;
+}
+
+#about-sponsors .container {
+  padding: 3rem 6rem;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 3rem;
+}
+
+#about-sponsors .box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  box-shadow: 0 0 10px 4px rgba(0 0 0 / 7%);
+}
+
+#about-sponsors .container img {
+  width: 100%;
+}
+
+#about-sponsors .all-sponsors {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 0;
+}
+
+#about-sponsors .all-sponsors article {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+#about-sponsors .all-sponsors article:nth-child(1) p {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--theme-primary-color);
+  letter-spacing: 5px;
+  line-height: 1.2em;
+  margin-bottom: 0;
+  padding-bottom: 10px;
+}
+
+#about-sponsors .all-sponsors article:nth-child(1) h2 {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.4em;
+}
+
+#about-sponsors .all-sponsors article .btn {
+  padding: 0.8rem 1.5rem;
+}
+
+#about-sponsors .all-sponsors article:nth-child(2) p {
+  line-height: 2em;
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
   line-height: 2em;
 }
