--- a/css/style.css
+++ b/css/style.css
@@ -472,6 +472,120 @@ header.sticky .btn {
 
 /* 
  =========================================================================================================================
+  Section#notice
+ =========================================================================================================================
+*/
+
+#notice {
+  padding: 4rem 0;
+  background: url("../images/shapes-bg.png") no-repeat center top/cover;
+  position: relative;
+}
+
+#notice::after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: inset 0 20rem 20rem var(--theme-statement-box-shadow-color),
+    inset 0 -20rem 20rem var(--theme-statement-box-shadow-color);
+}
+
+#notice * {
+  position: relative;
+  z-index: 2;
+}
+
+#notice > i {
+  display: block;
+  text-align: center;
+  color: var(--theme-primary-color);
+  font-size: 2rem;
+  margin: 1rem;
+}
+
+#notice > p {
+  font-family: "Cabin Sketch", display;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  line-height: 1.5em;
+  color: var(--theme-primary-color);
+  text-align: center;
+  font-size: 1.5rem;
+  margin-bottom: 0;
+  padding-bottom: 5px;
+}
+
+#notice > h2 {
+  font-family: "Rubik", Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.4em;
+  color: #333;
+  text-align: center;
+}
+
+#notice .container {
+  padding: 2rem 4rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 3rem;
+}
+
+#notice .container .box {
+  padding: 1rem 2rem;
+  background: #fff;
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  line-height: 2em;
+  border-radius: 5px;
+  box-shadow: 0 0 10px 5px rgb(0 0 0 / 12%);
+  overflow: hidden;
+  border-top: 10px solid var(--theme-primary-color);
+}
+
+#notice .box h2 {
+  color: #333;
+  font-size: 1.5rem;
+  text-transform: capitalize;
+  padding-bottom: 10px;
+  margin-bottom: 0;
+}
+
+#notice .box > p:nth-child(2) {
+  color: var(--theme-primary-color);
+  margin: 0;
+  font-weight: 700;
+}
+
+#notice .box > p:nth-child(3) {
+  color: #444;
+}
+
+#notice .container.read-all {
+  display: block;
+  text-align: right;
+}
+
+#notice .container .btn {
+  margin-left: auto;
+  background: transparent;
+  color: var(--theme-primary-color);
+  font-size: 1.1rem;
+  border-radius: 10px;
+  padding: 0.7rem 1.4rem;
+}
+
+#notice .container .btn:hover {
+  color: #fff;
+  background: var(--theme-primary-color);
+}
+
+/* 
+ =========================================================================================================================
   Section#events
  =========================================================================================================================
 */
