--- a/css/style.css
+++ b/css/style.css
@@ -1853,3 +1853,448 @@ footer a {
   font-size: 16px;
   line-height: 2em;
 }
+
+/* 
+ =========================================================================================================================
+  Section#admission-hero
+ =========================================================================================================================
+*/
+
+#admission-hero {
+  padding: calc(3rem + var(--header-height)) 0 3rem;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: url("../images/download\ \(1\).png") no-repeat center center/cover;
+  position: relative;
+}
+
+#admission-hero::after {
+  content: "";
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("../images/pencils-1.png") no-repeat center bottom/contain;
+}
+
+#admission-hero::before {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--theme-statement-box-shadow-color);
+}
+
+#admission-hero * {
+  position: relative;
+  z-index: 3;
+}
+
+#admission-hero p:nth-child(1) {
+  margin-top: 5rem;
+  margin-bottom: 0;
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 16px;
+  color: var(--theme-primary-color);
+  letter-spacing: 5px;
+  line-height: 2em;
+}
+
+#admission-hero h1 {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 1.4em;
+  color: #000;
+}
+
+#admission-hero p:nth-child(3) {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-size: 18px;
+  line-height: 2em;
+  color: #000;
+  max-width: 800px;
+  text-align-last: center;
+}
+
+/* 
+ =========================================================================================================================
+  Section#admission-content-1
+ =========================================================================================================================
+*/
+
+#admission-content-1 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+#admission-content-1 article {
+  min-height: 450px;
+  padding: 3rem 6rem;
+}
+
+#admission-content-1 article:nth-child(1) {
+  background: #2b76df;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #fff;
+}
+
+#admission-content-1 article:nth-child(2) {
+  background: url("../images/learn-by-doing.jfif") no-repeat center center/cover;
+}
+
+#admission-content-1 article:nth-child(1) h1 {
+  font-family: "Cabin Sketch", display;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 46px;
+  letter-spacing: 6px;
+  line-height: 1.5em;
+}
+
+#admission-content-1 article:nth-child(1) p {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 500;
+  line-height: 2em;
+}
+
+/* 
+ =========================================================================================================================
+  Section#admission-content-2
+ =========================================================================================================================
+*/
+
+#admission-content-2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+#admission-content-2 article {
+  min-height: 450px;
+  padding: 3rem 6rem;
+}
+
+#admission-content-2 article:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+}
+
+#admission-content-2 article:nth-child(2) {
+  background: url("../images/beyond-the-books.jfif") no-repeat center
+    center/cover;
+}
+
+#admission-content-2 article:nth-child(1) h1 {
+  font-family: "Cabin Sketch", display;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 46px;
+  letter-spacing: 6px;
+  line-height: 1.5em;
+}
+
+#admission-content-2 article:nth-child(1) p {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 500;
+  line-height: 2em;
+}
+
+/* 
+ =========================================================================================================================
+  Section#admission-details
+ =========================================================================================================================
+*/
+
+#admission-details {
+  display: grid;
+  background: url("../images/shapes-bg.png") repeat center center/contain;
+  grid-template-columns: repeat(2, 1fr);
+  position: relative;
+}
+
+#admission-details::after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: inset 0 -10rem 10rem rgba(0 0 0 / 25%);
+}
+
+#admission-details * {
+  position: relative;
+  z-index: 2;
+}
+
+#admission-details article {
+  padding: 3rem 6rem;
+}
+
+#admission-details article:nth-child(1) > p:nth-child(1) {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--theme-primary-color);
+  letter-spacing: 5px;
+  line-height: 1.5em;
+  margin-bottom: 0;
+  padding-bottom: 10px;
+}
+
+#admission-details article:nth-child(1) > h2 {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.4em;
+}
+
+#admission-details article:nth-child(1) > p:nth-child(3) {
+  line-height: 2em;
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 2em;
+  color: #666;
+}
+
+#admission-details article:nth-child(1) > .box {
+  display: flex;
+  margin-bottom: 1rem;
+}
+
+#admission-details article:nth-child(1) > .box i {
+  font-size: 24px;
+  background: #fff;
+  margin-right: 1rem;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  box-shadow: 0 0 10px 4px rgba(0 0 0 / 12%);
+}
+
+#admission-details article:nth-child(1) .box.blue i {
+  color: #7f5aff;
+}
+
+#admission-details article:nth-child(1) .box.orange i {
+  color: #ff7355;
+}
+
+#admission-details article:nth-child(1) .box > div p:nth-child(1) {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 3px;
+  line-height: 1.2em;
+  margin-bottom: 0;
+  padding-bottom: 10px;
+}
+
+#admission-details article:nth-child(1) .box > div p:nth-child(2) a {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  color: #ff7355;
+  text-decoration: none;
+  line-height: 1.7;
+  font-weight: 500;
+  font-size: 14px;
+}
+
+#admission-details article:nth-child(2) h1 {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  font-size: 42px;
+}
+
+#admission-details article:nth-child(2) div:nth-child(1) h1 {
+  color: #2b76df;
+}
+
+#admission-details article:nth-child(2) div:nth-child(2) h1 {
+  color: #ff7355;
+}
+
+#admission-details article:nth-child(2) div:nth-child(3) h1 {
+  color: #74bc19;
+}
+
+#admission-details article:nth-child(2) p {
+  line-height: 2em;
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 2em;
+  color: #666;
+}
+
+/* 
+ =========================================================================================================================
+  Section#apply-form
+ =========================================================================================================================
+*/
+
+#apply-form {
+  padding: 4rem 0;
+  background: url("../images/shapes-bg.png") repeat center center/contain;
+  position: relative;
+  min-height: 600px;
+}
+
+#apply-form::after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: inset 0 20rem 40rem rgba(0 0 0 / 12%);
+}
+
+#apply-form * {
+  position: relative;
+  z-index: 2;
+}
+
+#apply-form > i {
+  font-size: 2rem;
+  display: block;
+  text-align: center;
+  color: var(--theme-primary-color);
+  margin-bottom: 1rem;
+}
+
+#apply-form > p {
+  text-align: center;
+  font-family: "Cabin Sketch", display;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: var(--theme-primary-alt-color);
+  letter-spacing: 5px;
+  line-height: 1.4em;
+  margin-bottom: 0;
+  padding-bottom: 10px;
+}
+
+#apply-form > h2 {
+  text-align: center;
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.4em;
+  color: #333;
+}
+
+#apply-form .form-box {
+  margin: 3rem 12rem;
+  background-color: #ffffff;
+  border-radius: 5px;
+  overflow: hidden;
+  border-top: 10px solid var(--theme-primary-color);
+  padding: 30px 60px;
+  box-shadow: 0 0 5px 5px rgba(0 0 0 / 7%);
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 3rem;
+}
+
+#apply-form .form-box > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#apply-form .form-box h1 {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.4em;
+  color: #333;
+  text-align: center;
+}
+
+#apply-form .form-box input[type="text"],
+#apply-form .form-box input[type="email"],
+#apply-form .form-box select {
+  width: 96%;
+  padding: 14px 4%;
+  font-size: 16px;
+  color: #222;
+  font-weight: 400;
+  border-width: 0;
+  border-radius: 3px;
+  outline: none;
+  background: rgb(0 0 0 / 5%);
+  margin: 0 auto;
+  margin-bottom: 1rem;
+  transition: all 0.2s;
+}
+
+#apply-form .form-box input[type="text"]:focus,
+#apply-form .form-box input[type="email"]:focus,
+#apply-form .form-box select:focus {
+  box-shadow: 0 0 5px 1px rgb(0 0 0 / 25%);
+}
+
+#apply-form .form-box input[type="text"]::placeholder,
+#apply-form .form-box input[type="email"]::placeholder,
+#apply-form .form-box select {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  color: #555;
+}
+
+#apply-form .form-box div div {
+  width: 96%;
+  padding: 0 16px;
+  color: #222;
+  margin-bottom: 1rem;
+}
+
+#apply-form .form-box div div label {
+  display: inline-block;
+  font-size: 16px;
+  margin-right: 1rem;
+}
+
+#apply-form .form-box > div:last-child {
+  grid-column: 1 / 3;
+  display: flex;
+  justify-content: flex-end;
+  text-align: right;
+}
+
+#apply-form .form-box > div:last-child .btn {
+  display: block;
+  width: auto;
+  color: var(--theme-primary-color);
+  margin-top: 1rem;
+  margin-left: auto;
+  background: transparent;
+  font-size: 1.1rem;
+  border-radius: 10px;
+  padding: 0.7rem 1.4rem;
+  outline: none;
+}
+
+#apply-form .form-box > div:last-child .btn:hover {
+  background: rgb(0 0 0 / 5%);
+  opacity: 1;
+}
