--- a/css/style.css
+++ b/css/style.css
@@ -2413,3 +2413,228 @@ footer a {
   transform: scale(1.2);
   filter: grayscale(0) saturate(120%);
 }
+
+/* 
+ =========================================================================================================================
+  Section#sponsor-hero
+ =========================================================================================================================
+*/
+
+#sponsor-hero {
+  background: url("../images/shapes-bg-color.png");
+  min-height: 65vh;
+  padding: calc(3rem + var(--header-height)) 0 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: relative;
+}
+
+#sponsor-hero::after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+#sponsor-hero * {
+  position: relative;
+  z-index: 2;
+}
+
+#sponsor-hero p:nth-child(1) {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 16px;
+  color: var(--theme-primary-color);
+  letter-spacing: 5px;
+  line-height: 2em;
+  margin-bottom: 0;
+}
+
+#sponsor-hero h1 {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  font-size: 3rem;
+  color: rgba(0, 0, 0, 0.8);
+  line-height: 1.4em;
+  margin-bottom: 0;
+  padding-bottom: 0.5rem;
+}
+
+#sponsor-hero p:nth-child(3) {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-size: 18px;
+  color: #444;
+  line-height: 2em;
+  font-weight: 500;
+  max-width: 800px;
+}
+
+/* 
+ =========================================================================================================================
+  Section#sponsor-form
+ =========================================================================================================================
+*/
+
+#sponsor-form {
+  padding: 6rem 0 4rem;
+  background: url("../images/shapes-bg.png") repeat center center/contain;
+  position: relative;
+  min-height: 600px;
+}
+
+#sponsor-form::after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: inset 0 20rem 40rem rgba(0 0 0 / 12%);
+}
+
+#sponsor-form * {
+  position: relative;
+  z-index: 2;
+}
+
+#sponsor-form > i {
+  font-size: 2rem;
+  display: block;
+  text-align: center;
+  color: var(--theme-primary-color);
+  margin-bottom: 1rem;
+}
+
+#sponsor-form > p {
+  text-align: center;
+  font-family: "Cabin Sketch", display;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: var(--theme-primary-alt-color);
+  letter-spacing: 5px;
+  line-height: 1.4em;
+  margin-bottom: 0;
+  padding-bottom: 10px;
+}
+
+#sponsor-form > h2 {
+  text-align: center;
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.4em;
+  color: #333;
+}
+
+#sponsor-form .form-box {
+  margin: 3rem 12rem;
+  background-color: #ffffff;
+  border-radius: 5px;
+  overflow: hidden;
+  border-top: 10px solid var(--theme-primary-color);
+  padding: 30px 60px;
+  box-shadow: 0 0 5px 5px rgba(0 0 0 / 7%);
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 3rem;
+}
+
+#sponsor-form .form-box > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#sponsor-form .form-box h1 {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.4em;
+  color: #333;
+  text-align: center;
+}
+
+#sponsor-form .form-box input[type="text"],
+#sponsor-form .form-box input[type="email"],
+#sponsor-form .form-box select,
+#sponsor-form .form-box textarea {
+  width: 96%;
+  padding: 14px 4%;
+  font-size: 16px;
+  color: #222;
+  font-weight: 400;
+  border-width: 0;
+  border-radius: 3px;
+  outline: none;
+  background: rgb(0 0 0 / 5%);
+  margin: 0 auto;
+  margin-bottom: 1rem;
+  transition: all 0.2s;
+}
+
+#sponsor-form .form-box textarea {
+  height: 100%;
+}
+
+#sponsor-form .form-box input[type="text"]:focus,
+#sponsor-form .form-box input[type="email"]:focus,
+#sponsor-form .form-box select:focus,
+#sponsor-form .form-box textarea:focus {
+  box-shadow: 0 0 5px 1px rgb(0 0 0 / 25%);
+}
+
+#sponsor-form .form-box input[type="text"]::placeholder,
+#sponsor-form .form-box input[type="email"]::placeholder,
+#sponsor-form .form-box select {
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+  color: #555;
+}
+
+#sponsor-form .form-box div div {
+  width: 96%;
+  padding: 0 16px;
+  color: #222;
+  margin-bottom: 1rem;
+}
+
+#sponsor-form .form-box div div label {
+  display: inline-block;
+  font-size: 16px;
+  margin-right: 1rem;
+}
+
+#sponsor-form .form-box > div:last-child {
+  grid-column: 1 / 3;
+  display: flex;
+  justify-content: flex-end;
+  text-align: right;
+}
+
+#sponsor-form .form-box > div:last-child .btn {
+  display: block;
+  width: auto;
+  color: var(--theme-primary-color);
+  margin-top: 1rem;
+  margin-left: auto;
+  background: transparent;
+  font-size: 1.1rem;
+  border-radius: 10px;
+  padding: 0.7rem 1.4rem;
+  outline: none;
+}
+
+#sponsor-form .form-box > div:last-child .btn:hover {
+  background: rgb(0 0 0 / 5%);
+  opacity: 1;
+}
