--- a/css/utility.css
+++ b/css/utility.css
@@ -41,6 +41,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
 }
 
 /* 
@@ -60,4 +61,14 @@
 .btn:hover {
   opacity: 0.8;
   color: #fff;
+}
+
+/* 
+ =========================================================================================================================
+  Others
+ =========================================================================================================================
+*/
+
+.rotate-180 {
+  transform: rotate(180deg);
 }
