--- a/css/responsive.css
+++ b/css/responsive.css
@@ -32,3 +32,53 @@
     height: 30px;
   }
 }
+
+@media (max-width: 1200px) {
+  header {
+    --brand-icon-height: 30px;
+    font-size: 0.78rem;
+  }
+
+  header img {
+    height: var(--brand-icon-height);
+  }
+
+  header ul {
+    margin-right: 3rem;
+  }
+
+  /* Sticky Part */
+  header.sticky {
+    height: 40px;
+  }
+
+  header.sticky img {
+    height: 25px;
+  }
+}
+
+@media (max-width: 992px) {
+  header .container > ul,
+  header .container > a {
+    display: none;
+  }
+
+  header .container > i {
+    display: block;
+    font-size: 1.8rem;
+    cursor: pointer;
+  }
+
+  /* Sticky part */
+  header.sticky {
+    height: 50px;
+  }
+
+  header.sticky img {
+    height: 30px;
+  }
+
+  header.sticky .container > i {
+    font-size: 1.6rem;
+  }
+}
