Header Aside Added

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -82,3 +82,23 @@
     font-size: 1.6rem;
   }
 }
+
+/* 
+ =========================================================================================================================
+  aside 
+ =========================================================================================================================
+*/
+
+@media (max-width: 576px) {
+  aside img {
+    height: 30px;
+  }
+
+  aside .container > .btn {
+    padding: 0.3rem 1rem;
+  }
+
+  aside nav {
+    padding-left: 2rem;
+  }
+}
