Sticky Part Removed

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -22,15 +22,6 @@
     padding: 0.4rem 1.4rem;
     font-size: 0.88rem;
   }
-
-  /* Sticky Part */
-  header.sticky {
-    height: 50px;
-  }
-
-  header.sticky img {
-    height: 30px;
-  }
 }
 
 @media (max-width: 1200px) {
@@ -46,15 +37,6 @@
   header ul {
     margin-right: 3rem;
   }
-
-  /* Sticky Part */
-  header.sticky {
-    height: 40px;
-  }
-
-  header.sticky img {
-    height: 25px;
-  }
 }
 
 @media (max-width: 992px) {
@@ -67,19 +49,6 @@
     display: block;
     font-size: 1.8rem;
     cursor: pointer;
-  }
-
-  /* Sticky part */
-  header.sticky {
-    height: 50px;
-  }
-
-  header.sticky img {
-    height: 30px;
-  }
-
-  header.sticky .container > i {
-    font-size: 1.6rem;
   }
 }
 
@@ -100,5 +69,16 @@
 
   aside nav {
     padding-left: 2rem;
+  }
+}
+
+@media (max-width: 336px) {
+  aside img {
+    height: 25px;
+  }
+
+  aside > .container .btn {
+    margin-right: 1rem;
+    font-size: 0.88em;
   }
 }
